--- a/app/src/main/res/xml/preferencess.xml
+++ b/app/src/main/res/xml/preferencess.xml
@@ -7,15 +7,15 @@
 
         <CheckBoxPreference
             android:defaultValue="false"
-            android:key="notif_toast"
-            android:summary="Show notif as Toast message"
-            android:title="Toast notif" />
+            android:key="notification_toast"
+            android:summary="Show notification as Toast message"
+            android:title="Toast notification" />
 
         <CheckBoxPreference
             android:defaultValue="false"
-            android:key="notif_statis"
-            android:summary="Show notif as Statusbar message"
-            android:title="Statusbar notif" />
+            android:key="notification_statusbar"
+            android:summary="Show notification as Statusbar message"
+            android:title="Statusbar notification" />
 
     </PreferenceCategory>
 
